# remem

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LLM.md  README.md  check_licenses.py  deny.toml  out.txt  replace_cli.py  test_api.py  test_embed_dim.py  test_models.py
.agents/plugins/remem/: plugin.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor/: hooks.json
.github/: CODEOWNERS
.github/copilot/: mcp.json
.github/workflows/: bench.yml  bindings-swift.yml  ci.yml  code-coverage.yml  docker-ghcr.yml  nightly.yml  publish.yml  release.yml  rust.yml  sdk-python.yml  sdk-typescript.yml  security.yml  smoke.yml  tests.yml
bindings/: README.md
bindings/react-native/: README.md  expo-module.config.json  package-lock.json  package.json
bindings/react-native/android/: CMakeLists.txt  build.gradle
bindings/react-native/android/rust/: Cargo.toml
bindings/react-native/android/rust/src/: lib.rs
bindings/react-native/android/src/main/java/io/remem/expo/: NativeBridge.kt  RememModule.kt
bindings/react-native/example/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json  webpack.config.js
bindings/react-native/ios/: Remem.podspec  RememModule.swift
bindings/react-native/ios/RememCore/: EngineHandle.swift  MemoryModels.swift  RememCore-Bridging-Header.h  RememError.swift  rememhq.h
bindings/react-native/src/: Remem.types.ts  RememModule.ts  RememModule.web.ts  index.ts
bindings/react-native/src/__mocks__/: RememModule.ts
bindings/react-native/src/__tests__/: Memory.test.ts
bindings/scripts/: sync-headers.sh
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/CRemem/: shim.c
bindings/swift/Sources/CRemem/include/: crem_shim.h  rememhq.h
bindings/swift/Sources/Remem/: EngineHandle.swift  Memory.swift  MemoryModels.swift  RememError.swift
bindings/swift/Tests/RememTests/: MemoryTests.swift
bindings/swift/scripts/: build-xcframework.sh  sync-header.sh
docs/: ADR_ERROR_HANDLING.md  AGENT_SETUP.md  ARCHITECTURE.md  PROVIDERS.md  QUICKSTART.md
evals/: README.md  benchmark.py  thresholds.json
examples/: agent_loop.py  agent_loop.ts  multi_agent.py  rag_example.py
libremem/: Cargo.toml  README.md  build.rs
libremem/src/: lib.rs
libremem/src/document/: chunker.cpp  chunker.h
libremem/src/ffi/: remem.cpp  remem.h
libremem/src/vector_store/: index.cpp  index.h
remem-api/src/: main.rs
remem-cli/src/: main.rs
remem-core/src/memory/: types.rs
remem-core/src/providers/: google.rs
remem-core/src/storage/: mod.rs  sqlite.rs
remem-mcp/src/tools/: decay.rs  mod.rs
rememhq-api/: Cargo.toml  README.md  harden.py
rememhq-api/src/: main.rs
rememhq-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
rememhq-api/src/routes/: memories.rs  memory_stores.rs  mod.rs  sessions.rs
rememhq-cli/: Cargo.toml  README.md
rememhq-cli/src/: agent.rs  main.rs
rememhq-cli/src/tui/: app.rs  data.rs  event.rs  mod.rs
rememhq-cli/src/tui/ui/: browser.rs  confirm.rs  detail.rs  help.rs  mod.rs  monitor.rs  recall.rs  stats.rs
rememhq-core/: Cargo.toml  README.md  build.rs
rememhq-core/include/: rememhq.h
rememhq-core/src/: config.rs  lib.rs
rememhq-core/src/config/: modes.rs
rememhq-core/src/context/: builder.rs  mod.rs  smart_read.rs
rememhq-core/src/ffi/: mod.rs
rememhq-core/src/harness/: mod.rs  validator.rs
rememhq-core/src/loops/: eval.rs  mod.rs  react.rs
rememhq-core/src/memory/: types.rs
rememhq-core/src/models/: mod.rs
rememhq-core/src/providers/: anthropic.rs  embeddings.rs  factory.rs  google.rs  local.rs  mock.rs  mod.rs  openai.rs  resiliency.rs
rememhq-core/src/reasoning/: compaction.rs  consolidation.rs  contradiction.rs  mod.rs  resolution.rs  retrieval.rs  scoring.rs
rememhq-core/src/session/: extractors.rs  mod.rs  watcher.rs
rememhq-core/src/storage/: mod.rs  sqlite.rs  vector.rs
rememhq-core/tests/: test_config.rs  test_consolidation.rs  test_ffi.rs  test_reasoning.rs  test_sqlite_store.rs  test_vector_index.rs
rememhq-mcp/: Cargo.toml  README.md
rememhq-mcp/src/: main.rs
rememhq-mcp/src/tools/: build_context.rs  compact.rs  consolidate.rs  create_store.rs  decay.rs  forget.rs  knowledge.rs  list_memories.rs  list_sessions.rs  log_action.rs  mod.rs  project_context.rs  recall.rs  search.rs  set_mode.rs  smart_read.rs  stats.rs  store.rs  update.rs
rememhq-mcp/src/transport/: stdio.rs
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: agent_loop.py
sdk/python/rememhq/: __init__.py  client.py  models.py
sdk/python/tests/: test_client.py  test_client_integration.py  test_models.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: index.test.ts  index.ts  types.ts
sdk/typescript/src/__tests__/: client.test.ts
tests/: test_ffi.py
