[workspace]
members = [
    "rememhq-core",
    "rememhq-mcp",
    "rememhq-api",
    "rememhq-cli",
    "sdk/rust",
]
# bindings/react-native/android/rust is a standalone crate (its own
# Cargo.lock, built independently via cargo-ndk) that path-depends on
# rememhq-core but is NOT a member of this workspace. Cargo's workspace
# discovery automatically absorbs any path dependency nested inside the
# workspace directory tree unless explicitly excluded — see
# bindings/react-native/android/rust/Cargo.toml for the full rationale.
exclude = [
    "bindings/react-native/android/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/remem-io/remem"
homepage = "https://github.com/remem-io/remem"
authors = ["thrive-spectrexq <thrive-spectrexq@users.noreply.github.com>"]
categories = ["science", "database"]
keywords = ["ai", "memory", "agents", "llm", "reasoning"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
rusqlite = { version = "0.40", features = ["bundled"] }

# HTTP client (for cloud providers)
reqwest = { version = "0.13", features = ["json", "default-tls", "stream"], default-features = false }

# Configuration
toml = "1.1"
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework (API)
axum = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "auth"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"

# Vector math
ndarray = "0.17"

# FFI and Build
cc = "1.2"

# Internal crates
rememhq-core = { path = "rememhq-core" }

# NOTE: rememhq-mcp implements its own stdio JSON-RPC loop and does NOT use
# the rmcp crate. If a future version migrates to the rmcp SDK, add it back
# here at that time.
