[package]
name = "rememhq-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for remem — manage, serve, and inspect AI agent memory"

[[bin]]
name = "remem"
path = "src/main.rs"

[dependencies]
rememhq-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = "0.15"
chrono = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
owo-colors = "4.3.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
rustyline = "18.0.1"
indicatif = "0.17"
termimad = "0.35"
futures-util = "0.3"
ratatui = "0.28"
