[package]
name = "rememhq-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for remem — reasoning memory layer for AI agents"

[lib]
name = "rememhq_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
ndarray = { workspace = true }
utoipa = { workspace = true }
# needed by models::pull_model for streaming response body to disk
futures-util = "0.3"
sha2 = "0.11.0"
libremem-sys = { path = "../libremem", version = "0.1.8" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
axum = { workspace = true }
