[package]
name = "rememhq"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK for remem — reasoning memory layer for AI agents"
readme = "README.md"
keywords = ["ai", "memory", "agents", "llm", "reasoning"]
categories = ["science", "database"]

[dependencies]
rememhq-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
